--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.6",
     "vite": "^5.2.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
